# sOPT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  mkdocs.yml  pdf_event_hook.py  reference.bib  solver_library.md
.github/: docs.yml
docs/: glossary.md  index.md  repo_map.md
docs/bench/: README.md
docs/core/: math_utilities.md  options_reference.md
docs/finite_diff/: README.md  families.md  gradient_fd.md  hessian_fd.md  hv_fd.md
docs/javascripts/: mathjax.js
docs/problem/: objective_and_traits.md  oracle_api.md
docs/runtime/: cache_policy.md  evaluation_limits.md  oracle_cache.md  solver_flow_and_status.md
docs/solvers/: bfgs.md  dfp.md  gradient_descent.md  lbfgs.md  newton.md
docs/step_size/: README.md  armijo.md  fixed_step.md  goldstein.md  try_full.md  wolfe.md
examples/: bfgs.cpp  gradient_descent.cpp  init.cpp  lbfgs.cpp  newton.cpp  sandbox.cpp  step_size.cpp
include/sOPT/: sOPT.hpp
include/sOPT/algorithms/: algorithms.hpp  bfgs.hpp  dfp.hpp  gradient_descent.hpp  lbfgs.hpp  newton.hpp  sr1.hpp
include/sOPT/algorithms/detail/: solver_common.hpp
include/sOPT/bench/: augmented_lagrangian.hpp  broyden.hpp  powell_singular.hpp  quadratic_spd.hpp  rosenbrock.hpp  wood.hpp
include/sOPT/constraints/: box_constraints.hpp  constraints.hpp
include/sOPT/core/: callback.hpp  constants.hpp  core.hpp  display.hpp  math.hpp  options.hpp  options_validation.hpp  result.hpp  status.hpp  trace.hpp  typedefs.hpp  util.hpp  vecdefs.hpp
include/sOPT/finite_diff/: fd.hpp  fd_grad.hpp  fd_hess.hpp  fd_hv.hpp
include/sOPT/objectives/: augmented_lagrangian.hpp  cragg_levy.hpp  nazareth.hpp
include/sOPT/problem/: oracle.hpp  problem.hpp  traits.hpp
include/sOPT/step_size/: armijo.hpp  fixed_step.hpp  goldstein.hpp  step_attempt.hpp  step_size.hpp  try_full.hpp  wolfe.hpp
include/sOPT/step_size/detail/: step_size_common.hpp
include/sOPT/step_size/interpolated/: armijo_interp.hpp  goldstein_interp.hpp  interpolated_step_size.hpp  wolfe_interp.hpp
